data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_428.wast
;; 9. **Test Description 9**: Design a loop with a `br_if` instruction targeting an inner loop label but include a mispredicted `br_if` condition being false, propelling the execution to skip into an enclosing `unreachable`. Validate if mispredictions in branching propagate leading to `unreachable`.

(assert_invalid
  (module
    (func (result i32)
      (block
        (loop (param i32) 
          (block (result i32)
            (br_if 0 (i32.const 0))
            (unreachable)
          )
        )
      )
    )
  )
  "type mismatch"
)